--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,9 @@
         <activity android:name=".Search" />
         <activity android:name=".DiceDemo" />
         <activity android:name=".Correo" />
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".ListActivity" />
+        <activity android:name=".TwoLines" />
+        <activity android:name=".MultLines"></activity>
     </application>
 
 </manifest>
